--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <style>
   :root{
     /* Paleta fija para botones/series (NO aleatoria) */
-    --yes:#87cefa;          /* azul – Aquí sí */
-    --meh:#8a5adf;          /* morado – Me da igual */
-    --no:#ff7aa3;           /* rosa – Pasando */
+    --yes:#87cefa;          
+    --meh:#8a5adf;          
+    --no:#ff7aa3;           
 
-    /* Variables de tema aleatorio (sí cambian) */
+    /* Variables de tema aleatorio */
     --ink:#333;
     --bg-light:#fff7fb;
     --bg-mid:#ffe3ef;
     --bg-dark:#d38cb1;
     --card-bg:#ffffffee;
-    --accent-1:#d7a6f1;     /* títulos/contornos */
+    --accent-1:#d7a6f1;     
     --accent-2:#b48ad6;
-    --petal-rgba: 255,182,193; /* se sobreescribe desde JS */
+    --petal-rgba: 255,182,193;
   }
 
-  /* ===== Fondo temático con pétalos (sin degradado) ===== */
+  /* ===== Fondo temático ===== */
   body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
@@ -35,9 +35,8 @@
     align-items: center;
     background: var(--bg-light);
     position: relative;
-    overflow: hidden; /* sin scroll vertical; usamos scroll interno en paneles */
+    overflow: hidden;
   }
-  /* Capas de pétalos */
   body::before, body::after{
     content:"";
     position: fixed;
@@ -52,10 +51,7 @@
     filter: blur(0.2px);
     z-index: -1;
   }
-  body::after{
-    animation-duration: 32s;
-    opacity: .6;
-  }
+  body::after{ animation-duration: 32s; opacity: .6; }
   @keyframes petals {
     0% { background-position: 0 -10vh, 20vw -20vh, 60vw -15vh, 85vw -25vh; }
     100% { background-position: 0 120vh, 20vw 130vh, 60vw 125vh, 85vw 135vh; }
@@ -66,7 +62,7 @@
   h2 { color: var(--accent-2); margin: 6px 0 10px; }
   h3 { color: var(--accent-1); margin: 10px 0; }
 
-  /* Páginas */
+  /* Pantallas */
   #start-screen, #mode-screen, #results, #stats-screen {
     display: none;
     flex-direction: column;
@@ -114,7 +110,7 @@
   }
   .card div { font-weight: 600; color: var(--ink); padding-top: 6px; }
 
-  /* Botonera */
+  /* Botones */
   #buttons {
     margin-top: 10px;
     display: flex;
@@ -138,26 +134,6 @@
   .btn:hover { transform: translateY(-1px); box-shadow: 0 10px 20px rgba(0,0,0,.16); }
   .btn:active { transform: translateY(0); opacity:.95; }
 
-  .results-container { display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; }
-  .list { margin: 6px 0; }
-  ul { list-style: none; padding: 0; font-size: 16px; margin:0; }
-  input {
-    padding: 10px 12px; font-size: 16px; border-radius: 10px;
-    border: 2px solid var(--accent-1); width: 220px; text-align: center; background: #fff;
-    box-shadow: 0 6px 16px rgba(0,0,0,.08);
-  }
-
-  /* Modo elección */
-  .mode-grid{
-    display:grid; grid-template-columns: 1fr; gap:12px; max-width:720px; width:100%; padding: 0 10px;
-  }
-  .mode-card{
-    background: var(--card-bg); border:2px solid var(--accent-1); border-radius:16px;
-    padding:12px; box-shadow: 0 8px 24px rgba(0,0,0,.12);
-  }
-  .mode-card p{ margin:6px 0 0 0; color:#555; font-size: 14px;}
-  @media (min-width:760px){ .mode-grid{ grid-template-columns: 1fr 1fr; } }
-
   /* Tablas */
   table {
     border-collapse: collapse;
@@ -169,7 +145,12 @@
     box-shadow: 0 8px 24px rgba(0,0,0,0.12);
     border: 2px solid var(--accent-1);
   }
-  table th, table td { padding: 8px 10px; border-bottom: 1px solid #f0e7f8; text-align: left; }
+  table th, table td {
+    padding: 10px 12px;
+    border-bottom: 1px solid #f0e7f8;
+    text-align: left;
+    word-break: break-word;
+  }
   table th {
     background: linear-gradient(180deg, var(--accent-2) 0%, var(--accent-1) 100%);
     color: white; letter-spacing:.3px; font-size: 14px;
@@ -178,61 +159,42 @@
   table tr:nth-child(even) { background-color: #faf7ff; }
   table tr:hover { background-color: #f4ecff; transition: background .2s ease; }
 
-  .notice { color: var(--accent-2); margin-top: 6px; }
-  .error { color: #d6456a; margin-top: 6px; }
-  .muted { color: #777; }
+  .cards-small { line-height: 1.4; }
 
-  /* ===== Layout de estadísticas (pantalla completa sin scroll) ===== */
+  /* ===== Layout estadísticas ===== */
   #stats-screen{
     height: 100vh;
     padding: 6px 10px 10px;
     box-sizing: border-box;
     overflow: hidden;
   }
-  .stats-title-wrap{ margin: 0 0 4px; }
   .stats-grid{
     display:grid;
     grid-template-columns: minmax(340px, 1fr) minmax(420px, 1.2fr);
     gap: 12px;
-    height: calc(100vh - 120px); /* deja sitio para título y botón volver */
+    height: calc(100vh - 120px);
     align-items: stretch;
   }
 
-  /* Columna izquierda: gráfico con scroll horizontal */
-  .chart-card{
-    height: 100%;
-    background: var(--card-bg); border: 2px solid var(--accent-1);
-    border-radius: 16px; box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  .chart-card, .top-card, .aff-card{
+    background: var(--card-bg);
+    border: 2px solid var(--accent-1);
+    border-radius: 16px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     padding: 8px;
     display:flex; flex-direction:column;
   }
-  .chart-scroll {
-    flex:1 1 auto;
-    width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    border-radius: 12px;
-  }
-  .chart-scroll canvas { display: block; }
-  .chart-container canvas { height: 320px !important; }
-
-  /* Columna derecha: TOP tarjetas (más ancha + tipografía más pequeña) */
-  .top-card{
-    height: 100%;
-    background: var(--card-bg); border: 2px solid var(--accent-1);
-    border-radius: 16px; box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    padding: 8px;
-    display:flex; flex-direction:column;
-  }
-  .top-scroll{
+  .chart-scroll, .top-scroll, .aff-scroll {
     flex:1 1 auto;
     overflow:auto;
     border-radius: 12px;
+    max-height: calc(100vh - 200px);
+    padding-bottom: 6px;
   }
-  .top-card table th{ font-size: 13.5px; }
-  .top-card table td{ font-size: 12.5px; }
-
-  /* Fila inferior: afinidades en dos columnas, cada una con scroll propio */
+  .chart-scroll { overflow-x: auto; overflow-y: hidden; }
+  .chart-container canvas { height: 320px !important; }
+  .top-card table th { font-size: 13.5px; }
+  .top-card table td { font-size: 12.5px; }
   .affinity-wrap{
     margin-top: 8px;
     display:grid;
@@ -240,86 +202,21 @@
     gap: 12px;
     height: calc(100vh - 120px);
   }
-  .aff-card{
-    background: var(--card-bg); border: 2px solid var(--accent-1);
-    border-radius: 16px; box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    padding: 8px;
-    display:flex; flex-direction:column; min-height: 0;
-  }
-  .aff-scroll{
-    flex:1 1 auto;
-    overflow:auto;
-    border-radius: 12px;
-  }
-  /* Nombres de tarjetas más pequeños dentro de afinidades */
   .aff-card td.cards-small { font-size: 12px; line-height: 1.25; }
 
-  /* Responsive ajustado */
+  /* ===== Responsive ===== */
   @media (max-width: 980px){
-    body { overflow:auto; } /* permitido scroll si pantalla pequeña */
-    .stats-grid{ grid-template-columns: 1fr; height: auto; }
-    .affinity-wrap{ grid-template-columns: 1fr; height: auto; }
+    body { overflow:auto; }
+    .stats-grid { grid-template-columns: 1fr; height: auto; }
+    .affinity-wrap { grid-template-columns: 1fr; height: auto; }
   }
-  /* Evitar que las tablas se amontonen y dar scroll si hay muchas filas */
-.top-scroll, .aff-scroll {
-  overflow-y: auto;
-  max-height: calc(100vh - 200px); /* ajusta según tu layout */
-  padding-bottom: 6px;
-}
-
-/* Espaciado entre celdas para mayor legibilidad */
-table th, table td {
-  padding: 10px 12px;
-  word-break: break-word; /* evitar que nombres largos deformen la tabla */
-}
-
-/* Evitar que los textos se peguen demasiado */
-.cards-small {
-  line-height: 1.4;
-}
-/* ===== Mejoras de tablas estadísticas ===== */
-
-/* Scroll interno y mejor legibilidad */
-.top-scroll, .aff-scroll {
-  overflow-y: auto;
-  max-height: calc(100vh - 200px);
-  padding-bottom: 6px;
-}
-
-table th, table td {
-  padding: 10px 12px;
-  word-break: break-word;
-}
-
-.cards-small {
-  line-height: 1.4;
-}
-
-/* ===== Vista móvil optimizada ===== */
-@media (max-width: 760px) {
-  /* Las tablas de afinidad se apilan */
-  .affinity-wrap {
-    grid-template-columns: 1fr !important;
-    gap: 16px;
+  @media (max-width: 760px) {
+    .stats-grid, .affinity-wrap { grid-template-columns: 1fr !important; gap: 16px; }
+    table th, table td { font-size: 13px; padding: 8px 10px; }
+    .top-card table td, .aff-card table td { font-size: 12px; }
   }
-
-  /* Evitar scroll horizontal en móvil */
-  .stats-grid {
-    grid-template-columns: 1fr !important;
-  }
-
-  /* Tablas más compactas pero legibles */
-  table th, table td {
-    font-size: 13px;
-    padding: 8px 10px;
-  }
-
-  .top-card table td,
-  .aff-card table td {
-    font-size: 12px;
-  }
-}  
 </style>
+
 </head>
 <body>
 
@@ -925,4 +822,5 @@ table th, table td {
 </script>
 </body>
 </html>
+
 
